test: 外部依存テストを削除し、demo テストを gradle test から除外
- 外部プロジェクト (Project4Test, Defects4j) 依存のテスト11個を削除
- 空のテストクラス (JavaParserUtilTest, CodeElementTest, EnhancedDebuggerTest, CoverageGeneratorTest) を削除
- ProbeBenchmarkTest から外部依存のメソッドを削除し、本プロジェクト内で完結するベンチマークのみ残す
- build.gradle に demo パッケージの除外設定を追加
- docs/TODO-tests.md に削除したテストの再実装情報を記録

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>